--- a/Classification_Hackathon_1074.ipynb
+++ b/Classification_Hackathon_1074.ipynb
@@ -6,7 +6,7 @@
       "name": "Classification-Hackathon-1074.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "toc_visible": true
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/RLSwanepoel/Hackathons/blob/master/Classification_Hackathon_1074.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -74,8 +84,8 @@
         "colab": {}
       },
       "source": [
-        "df_train = pd.read_csv('../training.csv')\n",
-        "df_test = pd.read_csv('../test.csv')"
+        "df_train = pd.read_csv('training.csv')\n",
+        "df_test = pd.read_csv('test.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -96,16 +106,16 @@
       "metadata": {
         "id": "ijOvoFNfj1vV",
         "colab_type": "code",
+        "outputId": "bcaed8d8-177e-4902-ba11-2d61f1390985",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 412
-        },
-        "outputId": "bcaed8d8-177e-4902-ba11-2d61f1390985"
+        }
       },
       "source": [
         "df_train.info()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,16 +151,16 @@
       "metadata": {
         "id": "aq77coxwlFb7",
         "colab_type": "code",
+        "outputId": "dbc238d3-d47d-4e4d-a950-d8c987b83a30",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        },
-        "outputId": "dbc238d3-d47d-4e4d-a950-d8c987b83a30"
+        }
       },
       "source": [
         "df_train.isna().sum()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,17 +207,17 @@
       "metadata": {
         "id": "el_6FfBBhwey",
         "colab_type": "code",
+        "outputId": "66afa1d8-035b-4a95-93df-21b16c373498",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 245
-        },
-        "outputId": "66afa1d8-035b-4a95-93df-21b16c373498"
+        }
       },
       "source": [
         "print(df_train.shape)\n",
         "df_train.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,17 +389,17 @@
       "metadata": {
         "id": "LTGz00L6r-0A",
         "colab_type": "code",
+        "outputId": "c1efc668-dac5-4a2a-814e-d34b679ba450",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "c1efc668-dac5-4a2a-814e-d34b679ba450"
+        }
       },
       "source": [
         "#Investigating the fraudulent transactions\n",
         "df_train[df_train.FraudResult == 1].head()"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1685,16 +1695,16 @@
       "metadata": {
         "id": "o4NeCHlCuile",
         "colab_type": "code",
+        "outputId": "92058a51-e1e3-435a-c5c7-b6b5ce16a889",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "92058a51-e1e3-435a-c5c7-b6b5ce16a889"
+        }
       },
       "source": [
         "print(df_train['FraudResult'].sum()/len(df_train)*100)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1710,11 +1720,11 @@
       "metadata": {
         "id": "jYAETETuyN2y",
         "colab_type": "code",
+        "outputId": "527d6876-6606-4f4c-dca7-4215698b2541",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        },
-        "outputId": "527d6876-6606-4f4c-dca7-4215698b2541"
+        }
       },
       "source": [
         "#from https://www.kaggle.com/tboyle10/methods-for-dealing-with-imbalanced-data\n",
@@ -1747,7 +1757,7 @@
         "plt.tick_params(axis='x', which='major', labelsize=15)\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1804,17 +1814,17 @@
       "metadata": {
         "id": "iqQkbcjZs993",
         "colab_type": "code",
+        "outputId": "d0956d9a-f7d3-4e9d-a5b1-dd01fbb0b0fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "d0956d9a-f7d3-4e9d-a5b1-dd01fbb0b0fa"
+        }
       },
       "source": [
         "print(df_all['CurrencyCode'].unique())\n",
         "print(df_all['CountryCode'].unique())"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,17 +1841,17 @@
       "metadata": {
         "id": "Cac1PonwZZ0y",
         "colab_type": "code",
+        "outputId": "c62d362f-8a7c-49dd-c3a1-ce4c16c7f35b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
-        },
-        "outputId": "c62d362f-8a7c-49dd-c3a1-ce4c16c7f35b"
+        }
       },
       "source": [
         "print(len(df_all['TransactionId'].unique()))\n",
         "print(df_all.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1950,16 +1960,16 @@
       "metadata": {
         "id": "j5_IpG1HpNG5",
         "colab_type": "code",
+        "outputId": "262de30d-3cd1-478e-83c7-eadd4a2ad5f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        },
-        "outputId": "262de30d-3cd1-478e-83c7-eadd4a2ad5f0"
+        }
       },
       "source": [
         "df_all.head()"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2166,17 +2176,17 @@
       "metadata": {
         "id": "FCT2BwxPqeJv",
         "colab_type": "code",
+        "outputId": "255dedb9-6731-43a2-fae1-0c359e6eb3c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 226
-        },
-        "outputId": "255dedb9-6731-43a2-fae1-0c359e6eb3c3"
+        }
       },
       "source": [
         "#Confirming that the Id's are stripped of the leading strings\n",
         "df_all.head()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2376,17 +2386,17 @@
       "metadata": {
         "id": "i3bKjbJfrROQ",
         "colab_type": "code",
+        "outputId": "a550cf6c-8348-4de3-b4ad-4c51aa697346",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 600
-        },
-        "outputId": "a550cf6c-8348-4de3-b4ad-4c51aa697346"
+        }
       },
       "source": [
         "#Checking the datatypes for the features to confirm that all features are numerical values\n",
         "df_all.info()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2497,11 +2507,11 @@
       "metadata": {
         "id": "eWf_VYeul3oZ",
         "colab_type": "code",
+        "outputId": "82f4f7bf-2b8e-4bbc-e0f1-2305da224134",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 507
-        },
-        "outputId": "82f4f7bf-2b8e-4bbc-e0f1-2305da224134"
+        }
       },
       "source": [
         "print('Logistic Regression\\n')\n",
@@ -2617,16 +2627,16 @@
       "metadata": {
         "id": "LiGHzmHYj58x",
         "colab_type": "code",
+        "outputId": "433b674a-5927-443c-e753-88c453a7b0f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
-        },
-        "outputId": "433b674a-5927-443c-e753-88c453a7b0f1"
+        }
       },
       "source": [
         "clf.fit(X, y)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2658,16 +2668,16 @@
       "metadata": {
         "id": "dX9yRk8fj78A",
         "colab_type": "code",
+        "outputId": "7bf2b2e1-1c4e-4ea7-f22e-deabe977319c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        },
-        "outputId": "7bf2b2e1-1c4e-4ea7-f22e-deabe977319c"
+        }
       },
       "source": [
         "clf.best_params_"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2688,18 +2698,18 @@
       "metadata": {
         "id": "cXz60qZP7CqV",
         "colab_type": "code",
+        "outputId": "e8e7e6f8-cc3f-4e7a-bd48-fa50db890466",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        },
-        "outputId": "e8e7e6f8-cc3f-4e7a-bd48-fa50db890466"
+        }
       },
       "source": [
         "#Fitting model with best parameters\n",
         "knn = KNeighborsClassifier(leaf_size=10, n_neighbors=4, weights='uniform', n_jobs=-1)\n",
         "knn.fit(X, y)"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2736,16 +2746,16 @@
       "metadata": {
         "id": "h6N6ZvYz8XHg",
         "colab_type": "code",
+        "outputId": "237598af-3e1e-4899-d9ba-aded70ce5b4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "237598af-3e1e-4899-d9ba-aded70ce5b4e"
+        }
       },
       "source": [
         "submission.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
